# lab_4_oop

./: CMakeLists.txt  gtests.cpp  main.cpp
include/: array.h  figure.h  five_side.h  hexagon.h  octangle.h  pentagon.h  point.h  rhombus.h  six_side.h
src/: array.cpp  figure.cpp  five_side.cpp  octangle.cpp  rhombus.cpp  six_side.cpp
